# RustySound

./: .dockerignore  .gitignore  CNAME  Cargo.toml  Dioxus.toml  Dockerfile  Justfile  README.md  build.rs  docker-compose.yml  flake.nix  manifest.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  packaging-dispatch.yml
assets/: favicon.icns  logo.icns  site.webmanifest  tailwind.css
assets/styling/: app.css  main.css  themes.css
assets/styling/themes/aero/: theme.css
assets/styling/themes/aqua/: theme.css
assets/styling/themes/fluent/: theme.css
assets/styling/themes/fruit/: theme.css
assets/styling/themes/hig/: theme.css
assets/styling/themes/material/: theme.css
assets/styling/themes/navi/: theme.css
assets/styling/themes/rusty/: theme.css
assets/styling/themes/shared/: base.css
assets/styling/themes/spot/: theme.css
assets/styling/themes/y2k/: theme.css
memory/: MEMORY.md  project_overview.md  project_theme_system.md
scripts/: bundle-android.sh  bundle-apple.sh  ios-clang.sh  run-with-rustup-env.sh  serve-ios.sh  setup-rustup-env.sh
src/: cache.rs  cache_service.rs  diagnostics.rs  main.rs  offline_art.rs  offline_audio.rs  storage.rs  utils.rs
src/api/: lyrics.rs  mod.rs  models.rs  navidrome.rs
src/api/navidrome/: auth_native_and_stream.rs  bookmarks_favorites_and_playlists.rs  library_browsing.rs  mod.rs  playlist_mutations.rs  radio_search_and_scrobble.rs  response_models.rs
src/components/: add_to_menu.rs  app.rs  app_view.rs  audio_manager.rs  cached_image.rs  icons.rs  mod.rs  navigation.rs  player.rs  sidebar.rs  song_details.rs
src/components/add_to_menu/: intent.rs  mod.rs  overlay.rs  overlay_actions.rs  overlay_view.rs  song_resolver.rs
src/components/audio_manager/: controller_native.rs  controller_web.rs  mod.rs  native_bridge_bootstrap.rs  native_bridge_runtime.rs  native_ios_backend.rs  native_ios_remote.rs  native_windows_backend.rs  playback_api.rs  queue_and_stream_helpers.rs  shared_types_and_web_helpers.rs
src/components/audio_manager/audio_controller_native/: playback_state_and_bookmarks.rs  polling_and_remote_actions.rs  track_and_queue_sync.rs
src/components/audio_manager/audio_controller_wasm/: setup_and_polling.rs  track_and_control_sync.rs
src/components/player/: controls.rs  mod.rs
src/components/song_details/: details_panel.rs  details_panel_view.rs  helpers.rs  lyrics_panel.rs  mini_lyrics_strip.rs  mod.rs  overlay.rs  overlay_view.rs  queue_panel.rs  related_panel.rs  types.rs
src/components/views/: album_detail.rs  album_song_row.rs  albums.rs  artist_detail.rs  artist_links.rs  artists.rs  bookmarks.rs  downloads.rs  favorites.rs  home.rs  home_layout.rs  mod.rs  playlist_detail.rs  playlists.rs  queue.rs  radio.rs  random.rs  search.rs  settings.rs  songs.rs  stats.rs
src/db/: mod.rs
