[package]
name = "rustysound"
version = "0.1.0"
authors = ["ad-archer <antonioarcher.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "js"] }
urlencoding = "2.1"
getrandom = { version = "0.2", features = ["js"] }

# Server-side dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Client-side dependencies  
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
web-sys = { version = "0.3", features = ["HtmlAudioElement", "Storage", "Window", "Document", "Element"] }
js-sys = "0.3"
gloo-storage = "0.3"
gloo-net = "0.6"
gloo-timers = "0.3"
wasm-bindgen = "0.2"

# Linux-specific: Pin ashpd to avoid zbus compatibility issues  
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "=0.10.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dioxus/fullstack"]
mobile = ["dioxus/mobile", "dioxus/fullstack"]
server = ["dioxus/server"]
