[package]
name = "rustysound"
version = "1.0.0"
authors = ["ad-archer <antonioarcher.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.3", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "js"] }
urlencoding = "2.1"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
futures-util = "0.3"
once_cell = "1.19"
rand = "0.8"

# Server-side dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
png = "0.17"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = ["Foundation", "Media", "Media_Core", "Media_Playback", "Storage_Streams"] }

# Client-side dependencies  
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
web-sys = { version = "0.3", features = ["HtmlAudioElement", "Storage", "Window", "Document", "Element"] }
js-sys = "0.3"
gloo-storage = "0.3"
gloo-net = "0.6"
gloo-timers = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[package.metadata.bundle]
name = "RustySound"
identifier = "app.adarcher.rustysound"
icon = [
    "assets/favicon.ico",
    "assets/favicon.icns",
    "assets/web-app-manifest-512x512.png",
]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
